# src/controllers/auth.controller.ts
@@ -21,7 +21,23 @@ const registerValidateSchema = Yup.object({
   fullName: Yup.string().required(),
   username: Yup.string().required(),
   email: Yup.string().email().required(),
-  password: Yup.string().required(),
+  password: Yup.string()
+    .required()
+    .min(6, "Password must be at least 6 characters")
+    .test(
+      "at-least-one-uppercase-letter",
+      "Contains at least one uppercase letter",
+      (value) => {
+        if (!value) return false;
+        const regex = /^(?=.*[A-Z])/;
+        return regex.test(value);
+      }
+    )
+    .test("at-least-one-number", "Contains at least one number", (value) => {
+      if (!value) return false;
+      const regex = /^(?=.*\d)/;
+      return regex.test(value);
+    }),
   confirmPassword: Yup.string()
     .required()
     .oneOf([Yup.ref("password"), ""], "Password must be match"),
@@ -29,6 +45,13 @@ const registerValidateSchema = Yup.object({
 
 export default {
   async register(req: Request, res: Response) {
+    /**
+      #swagger.tags = ['Auth']
+     #swagger.requestBody={
+      required:true,
+      schema:{$ref: '#/components/schemas/RegisterRequest'}
+     }
+      */
     const { fullName, username, email, password, confirmPassword } =
       req.body as unknown as TRegister;
 
@@ -57,6 +80,7 @@ export default {
   },
   async login(req: Request, res: Response) {
     /**
+     #swagger.tags = ['Auth']
      #swagger.requestBody = {
      required: true,
      schema: {$ref: "#/components/schemas/LoginRequest"}
@@ -66,6 +90,7 @@ export default {
     try {
       const userByidentifier = await UserModel.findOne({
         $or: [{ email: identifier }, { username: identifier }],
+        isActive: true,
       });
       if (!userByidentifier) {
         return res.status(200).json({ message: "user not found", data: null });
@@ -93,6 +118,7 @@ export default {
   },
   async me(req: IReqUser, res: Response) {
     /**
+      #swagger.tags=['Auth']
      #swagger.security=[{
      "bearerAuth":[]
      }]
@@ -104,6 +130,35 @@ export default {
         message: "Success get user profile",
         data: result,
       });
+    } catch (error) {
+      const err = error as unknown as Error;
+      res.status(400).json({ message: err.message, data: null });
+    }
+  },
+  async activation(req: Request, res: Response) {
+    /**
+     #swagger.tags=['Auth']
+      #swagger.requestBody={
+     required:true,
+      schema:{$ref: '#/components/schemas/ActivationRequest'}
+     }
+     
+     */
+    try {
+      const { code } = req.body as { code: string };
+      const user = await UserModel.findOneAndUpdate(
+        { activationCode: code },
+        {
+          isActive: true,
+        },
+        {
+          new: true,
+        }
+      );
+
+      res
+        .status(200)
+        .json({ message: "User succesfully activated", data: user });
     } catch (error) {
       const err = error as unknown as Error;
       res.status(400).json({ message: err.message, data: null });
