# src/routes/api.ts
@@ -6,6 +6,6 @@ const router = express.Router();
 router.post("/auth/register", authController.register);
 router.post("/auth/login", authController.login);
 router.get("/auth/me", authMiddleware, authController.me);
-//authMiddleware authcontorller.me
+router.post("/auth/activation", authController.activation);
 
 export default router;
